Fixed Tim's whitespace problem

--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
 html, body {
   height:100%;
   font-family: 'Lato';
-  margin-left:  -24px;
-  margin-right: -24px;
-  padding-left:  24px;
-  padding-right:  24px;
 }
 
 @font-face {
